--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ referrerpolicy="no-referrer" />
             <a class="header-logo link" href="http://127.0.0.1:5501/index.html" >Web<span class="header-logo-studio">Studio</span></a>
         <ul class="header-list list" >
             <li class="header-item">
-                <a class="header-link link" href="./index.html">Studio</a>
+                <a class="header-link link current" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
                 <a class="header-link link" href="./portfolio.html">Portfolio</a>
