--- a/portfolio.html
+++ b/portfolio.html
@@ -49,21 +49,27 @@
                 </ul>
             <ul class="about-button-list list link">
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
-                    <img src="./images/img1.jpg" alt="banking interface"
-                    width="360" 
-                    height="300">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
+                            <img src="./images/img1.jpg" alt="banking interface" class="team-list-item-img" 
+                            width="360" 
+                            height="300">
+                            <p class="overlay"></p>
+                        </div>
                     <div class="wrap-container">
                         <h2 class="text">Banking App Interface Concept</h2>
                         <p class="name">App</p>
                     </div>
-                    </a> 
+                </a>
                 </li>
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img2.jpg" alt="mobile payment" 
                     width="360" 
                     height="300">
+                    <p class="overlay"></p>
+                </div>
                     <div class="wrap-container">
                         <h2 class="text">Cashless Payment</h2>
                         <p class="name">Marketing</p>
@@ -71,10 +77,13 @@
                     </a>
                 </li>
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img3.jpg" alt="laptop and mobile"
                     width="360" 
                     height="300">
+                    <p class="overlay"></p>
+                    </div>
                     <div class="wrap-container">
                     <h2 class="text">Meditation App</h2>
                         <p class="name">App</p>
@@ -82,21 +91,27 @@
                     </a>
                 </li>            
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img4.jpg" alt="taxi" 
                         width="360" 
                         height="300">
+                        <p class="overlay"></p>
+                    </div>
                     <div class="wrap-container">
                         <h2 class="text">Taxi Service</h2>
                         <p class="name">Marketing</p>
                     </div>
                     </a>
                 </li>
-                <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+               <li class="about-images-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img5.jpg" alt="mobile screen" 
                     width="360" 
                     height="300">
+                    <p class="overlay"></p>
+                        </div>
                     <div class="wrap-container">
                     <h2 class="text">Screen Illustrations</h2>
                     <p class="name">Design</p>
@@ -104,10 +119,13 @@
                 </a>
                 </li>
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img6.jpg" alt="lady" 
                     width="360" 
                     height="300">
+                    <p class="overlay"></p>
+                        </div>
                     <div class="wrap-container">
                     <h2 class="text">Online Courses</h2>
                     <p class="name">Marketing</p>
@@ -115,10 +133,13 @@
                 </a>
                 </li>
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img7.jpg" alt="instagram stories" 
                     width="360" 
                     height="300">
+                    <p class="overlay"></p>
+                        </div>
                     <div class="wrap-container">
                     <h2 class="text">Instagram Stories Concept</h2>
                     <p class="name">Design</p>
@@ -126,10 +147,13 @@
                 </a>
                 </li>
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img8.jpg" alt="vegetables" 
                     width="360" 
                     height="300">
+                    <p class="overlay"></p>
+                        </div>
                     <div class="wrap-container">
                     <h2 class="text">Organic Food</h2>
                     <p class="name">Web Site</p>
@@ -137,10 +161,13 @@
                 </a>
                 </li>
                 <li class="about-images-link">
-                    <a href="" class="nine-img-link">
+                    <a href="" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wrapper">
                     <img src="./images/img9.jpg" alt="coffee" 
                     width="360" 
                     height="300">
+                    <p class="overlay"></p>
+                        </div>
                     <div class="wrap-container">
                     <h2 class="text">Fresh Coffee</h2>
                     <p class="name">Web Site</p>
