--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ referrerpolicy="no-referrer" />
             <div class="container hero-container">
                 <h1 class="first-header">Effective Solutions
                     for Your Business</h1>
-            <button type="button" class="studio-btn">Order Service</button>
+            <button type="button" class="studio-btn" data-modal-open>Order Service</button>
         </div>
         </section>
         <section class="second-section">
@@ -449,5 +449,15 @@ referrerpolicy="no-referrer" />
     </div>
 </div>
     </footer>
+    <div class="backdrop  is-hidden" data-modal>
+        <div class="modal" >
+            <button type="button" class="modal-close" data-modal-close>
+                <svg width="8" height="8" class="backdrop-icon">
+                    <use href="./images/icons.svg#icon-cross" ></use>
+                </svg>
+            </button>
+        </div>
+</div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
