--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,9 @@
                             <img src="./images/img1.jpg" alt="banking interface" class="team-list-item-img" 
                             width="360" 
                             height="300">
-                            <p class="overlay"></p>
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · 
+                                Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · 
+                                Cloud Storage App</p>
                         </div>
                     <div class="wrap-container">
                         <h2 class="text">Banking App Interface Concept</h2>
@@ -68,7 +70,8 @@
                     <img src="./images/img2.jpg" alt="mobile payment" 
                     width="360" 
                     height="300">
-                    <p class="overlay"></p>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · 
+                        Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="wrap-container">
                         <h2 class="text">Cashless Payment</h2>
@@ -82,7 +85,8 @@
                     <img src="./images/img3.jpg" alt="laptop and mobile"
                     width="360" 
                     height="300">
-                    <p class="overlay"></p>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts · 
+                        Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                     <div class="wrap-container">
                     <h2 class="text">Meditation App</h2>
@@ -96,7 +100,8 @@
                     <img src="./images/img4.jpg" alt="taxi" 
                         width="360" 
                         height="300">
-                        <p class="overlay"></p>
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · 
+                            Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                     <div class="wrap-container">
                         <h2 class="text">Taxi Service</h2>
@@ -110,7 +115,8 @@
                     <img src="./images/img5.jpg" alt="mobile screen" 
                     width="360" 
                     height="300">
-                    <p class="overlay"></p>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts
+                         · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                     <div class="wrap-container">
                     <h2 class="text">Screen Illustrations</h2>
@@ -124,7 +130,8 @@
                     <img src="./images/img6.jpg" alt="lady" 
                     width="360" 
                     height="300">
-                    <p class="overlay"></p>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts
+                         · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                     <div class="wrap-container">
                     <h2 class="text">Online Courses</h2>
@@ -138,7 +145,8 @@
                     <img src="./images/img7.jpg" alt="instagram stories" 
                     width="360" 
                     height="300">
-                    <p class="overlay"></p>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts
+                         · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                     <div class="wrap-container">
                     <h2 class="text">Instagram Stories Concept</h2>
@@ -152,7 +160,8 @@
                     <img src="./images/img8.jpg" alt="vegetables" 
                     width="360" 
                     height="300">
-                    <p class="overlay"></p>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts
+                         · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                     <div class="wrap-container">
                     <h2 class="text">Organic Food</h2>
@@ -166,7 +175,8 @@
                     <img src="./images/img9.jpg" alt="coffee" 
                     width="360" 
                     height="300">
-                    <p class="overlay"></p>
+                    <p class="overlay">14 Stylish and User-Friendly App Design Concepts
+                         · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                     <div class="wrap-container">
                     <h2 class="text">Fresh Coffee</h2>
